--- a/model copy task/action.html
+++ b/model copy task/action.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>action</title>
   </head>
-  <body bgcolor="#fff">
+  <body>
     <h1>Your information sended</h1>
     <img class="like"
       src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Facebook_Like_button.svg/2048px-Facebook_Like_button.svg.png"
-      sizes="800x700"
+      sizes="800x700" alt="rasm"
     />
   </body>
 </html>
